# give-five-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: launch.py  utils.py
app/chat/: __init__.py  buttons.py  common_handlers.py  custom_exceptions.py  game_handlers.py  handlers.py  stat.py  types.py
app/core/: config.py  loader.py  message_template.py
