[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Герман Гриценко <gerfest.gricenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
